# CPP_Battleship_Game

./: .gitignore  README.md
c++_ex1/ex1/: ex1.sln
c++_ex1/ex1/ex1/: Source.cpp  ex1.vcxproj
cpp_ex1/: cpp_ex1.sln
cpp_ex1/cpp_ex1/: Source.cpp  cpp_ex1.vcxproj
ex1/: ex1.sln
ex1/TestFiles/Bad Boards/: bad_board_1.sboard  bad_board_1.sboard - Shortcut.lnk
ex1/ex1/: BattleshipBoard.cpp  BattleshipBoard.h  BattleshipGameFromFile.h  BattleshipGameManager.cpp  BattleshipGameManager.h  CMakeLists.txt  Constants.h  IBattleshipGameAlgo.h  LALALA.rar  Player.cpp  Player.h  Ship.cpp  Ship.h  ShipTester.cpp  Source.cpp  UPDATE.rar  before_submit.rar  debuging.rar  ex1.rar  ex1.vcxproj  ex1.vcxproj.filters  file1A.attack-a.txt  lalal.dir  main.cpp
ex1/ex1/tempdir/: New Microsoft Excel Worksheet.xlsx
ex1/ex1/tests/: BadBoard1.txt  BadBoard2.txt  BadBoard3.txt  CleanMoves.txt  EmptyFolder.txt  EndMoves.txt  Game1.txt  Game2.txt  Game3.txt  MissingFiles.txt  TieGame.txt  ex1.xls
ex1/ex1/tests/T12_Game3/: board_8.sboard
ex1/ex1/tests/T3_CleanMoves/: T3.rar
ex1/ex1/tests/T5_DirtyLegalMoves/: board_5.sboard
ex1/ex1/tests/T6_DirtyIlegalMoves/: board_6.sboard
ex1/ex1/tests/T7_MissingFiles/: board_6.sboard
ex1/ex1/tests/T9_TieGame/: few_movesA.attack-a  few_movesB.attack-b
ex1/ex1/tests/results/: CleanMoves.txt  DirtyIlegalMoves.txt  DirtyLegalMoves.txt  EmptyFolder.txt  EndMoves.txt  Game1.txt  Game2.txt  Game3.txt  MissingFiles.txt
ex2/: CMakeLists.txt  ex2.sln  game_board.sboard  game_movesA.attack  game_movesB.attack
ex2/PlayerFromFile/: PlayerFromFile.vcxproj  PlayerFromFile.vcxproj.filters
ex2/PlayerNaive/: PlayerNaive.vcxproj  PlayerNaive.vcxproj.filters
ex2/PlayerSmart/: BattleshipBoard.cpp  BattleshipBoard.h  Constants.h  PlayerSmart.cpp  PlayerSmart.h  PlayerSmart.vcxproj  PlayerSmart.vcxproj.filters  ShipInProcess.cpp  ShipInProcess.h  testPlayerSmart.h  testShipInProcess.h
ex2/TRY_RELEASE/: board_9.sboard  clean_movesA.attack
ex2/common/: Player.h  common.vcxproj  common.vcxproj.filters
ex2/ex2/: BattleshipBoard.cpp  BattleshipBoard.h  BattleshipGameManager.cpp  BattleshipGameManager.h  BattleshipGameUtils.cpp  BattleshipGameUtils.h  Constants.h  GamePlayerData.cpp  GamePlayerData.h  IBattleshipGameAlgo.h  Player.cpp  Player.h  PlayerFromFile.cpp  PlayerFromFile.h  PlayerNaive.cpp  PlayerNaive.h  PlayerSmart.cpp  PlayerSmart.h  PrintGameBoard.cpp  PrintGameBoard.h  Ship.cpp  Ship.h  ShipInProcess.cpp  ShipInProcess.h  ShipsInProcess.h  ex2.vcxproj  ex2.vcxproj.filters  game_movesA.attack  game_movesB.attack  main.cpp  resource.h
ex3/: ex3.sln
ex3/PlayerSmart/: PlayerSmart.vcxproj  PlayerSmart.vcxproj.filters  TestShipInProcess.h
ex3/TRY_RELEASE/: GalArnonPlayer.Adll  configuration.config  good_board - Copy.sboard
ex3/TRY_RELEASE/CHECK_DIANA/: game_board (1).sboard
ex3/common/: common.vcxproj  common.vcxproj.filters
ex3/ex3/: BattleshipBoard.cpp  BattleshipBoard.h  BattleshipGameManager.cpp  BattleshipGameManager.h  BattleshipGameUtils.cpp  BattleshipGameUtils.h  BattleshipPrint.cpp  BattleshipPrint.h  BattleshipTournamentManager.cpp  BattleshipTournamentManager.h  BoardDataImpl.h  CMakeLists.txt  GamePlayerData.cpp  GamePlayerData.h  Logger.cpp  Logger.h  PlayerAlgoDetails.h  PlayerGameResultData.cpp  PlayerGameResultData.h  PlayerSmart.cpp  PlayerSmart.h  RoundData.h  Ship.cpp  Ship.h  ShipInProcess.cpp  ShipInProcess.h  ShipsBoard.cpp  ShipsBoard.h  SingleGameProperties.h  StandingsTableEntryData.cpp  StandingsTableEntryData.h  ex3.vcxproj  ex3.vcxproj.filters  main.cpp  resultNode.h  students.txt  testPlayerSmart.cpp  testPlayerSmart.h  testShipInProcess.cpp  testShipInProcess.h
ex3/final_test_release64/: Avi_SmartAlgorithm.Ddll  configuration.config
ex3/five/: 3d_board_10x10x1_0.sboard  3d_board_10x10x6_0.sboard
ex3/only_us/: DianaPlayerSmart.rar  configuration.config
ex4/: ex4.sln
ex4/ex4/: CMakeLists.txt  Matrix.h  ex4.vcxproj  ex4.vcxproj.filters  main.cpp  main.h  main_2D.cpp  main_3D.cpp
ex4/ex4/Submission/: CMakeLists.txt  Matrix.h
